--- a/web-framework.html
+++ b/web-framework.html
@@ -6,28 +6,34 @@
 
     <div class="row">
 
-      <h1>Split Gutters</h1>
+      <div class="col-xs-12 text-center">
+        <h1>The Daily Beast Grid-System Tester</h1>
+      </div>
 
-<div class="container">
-  <div data-span='4'>
-    <code>
-      <span>span 4</span>
-    </code>
-  </div>
-
-  <div data-span='2'>
-    <code>
-      <span>span 2</span>
-    </code>
-  </div>
-</div>
+      <div style= "background-color: red; height: 250px;" class="col-lg-3 col-md-4 col-xs-6">
+      </div>
+      <div style= "background-color: blue; height: 250px;" class="col-lg-3 col-md-4 col-xs-6">
+      </div>
+      <div style= "background-color: orange; height: 250px; " class="col-lg-3 col-md-4 col-xs-6">
+      </div>
+      <div style= "background-color: green; height: 250px;" class="col-lg-3 col-md-4 col-xs-6">
+      </div>
+      <div style= "background-color: yellow; height: 250px;" class="col-lg-3 col-md-4 col-xs-6">
+      </div>
+      <div style= "background-color: pink; height: 250px;" class="col-lg-3 col-md-4 col-xs-6">
+      </div>
+      <div style= "background-color: purple; height: 250px;" class="col-lg-3 col-md-4 col-xs-6">
+      </div>
+      <div style= "background-color: brown; height: 250px;" class="col-lg-3 col-md-4 col-xs-6">
+      </div>
+    </div>
     <!-- /.row -->
 
   </div>
   <!-- /.container -->
 
   <div class="row">
-    <div style= "background-color: green; min-height: 250px;" class="offset-1-xs-2 offset-2-sm-4 offset-3-md-2 offset-4-lg-4">
+    <div style= "background-color: green; min-height: 250px;" class="offset-1-2 col-xs-6 col-sm-6 col-md-6 col-lg-6">
   </div>
   </div>
 
